--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "poreader"
-version = "1.0.1"
+version = "1.0.2"
 edition = "2021"
 description = "Read translation catalogs in PO format."
 authors = ["Frédéric Meyer <frederic.meyer.77@gmail.com>"]
@@ -16,9 +16,9 @@ travis-ci = { repository = "coreabreaker/poreader" }
 appveyor = { repository = "coreabreaker/poreader" }
 
 [build-dependencies]
-lalrpop = { git = "https://github.com/lalrpop/lalrpop.git", rev = "1c6df7e28fd7e75a7606b44eb2a0f3fe2848f426" }
+lalrpop = "~0.19.6"
 
 [dependencies]
-lalrpop-util = { version = "^0.19.6", features = ["lexer"] }
+lalrpop-util = { version = "~0.19.6", features = ["lexer"] }
 locale_config = "^0.3.0"
 regex = "^1.5.4"
