Workaround for Cargo

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,6 @@ jobs:
     docker:
       - image: cimg/rust:1.59-node
     steps:
-      - run:
-          name: Configure Git
-          command: "git config --global --unset url.ssh://git@github.com:.insteadof"
       - checkout
       - run:
           name: Check formatting
@@ -17,9 +14,6 @@ jobs:
     docker:
       - image: corebreaker/rust-devtools-circleci:rust1.59-v0.2.3
     steps:
-      - run:
-          name: Configure Git
-          command: "git config --global --unset url.ssh://git@github.com:.insteadof"
       - checkout
       - run:
           name: Make coverage
@@ -34,13 +28,10 @@ jobs:
     docker:
       - image: cimg/rust:1.59
     steps:
-      - run:
-          name: Configure Git
-          command: "git config --global --unset url.ssh://git@github.com:.insteadof"
       - checkout
       - run:
           name: Run tests
-          command: "cargo test"
+          command: "CARGO_NET_GIT_FETCH_WITH_CLI=true cargo test"
 
 workflows:
   coverage:
