Revert header properties
Even if header properties can appear in several lines, the reader gets a merged version with joined strings with a space as separator.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,12 +12,12 @@ jobs:
 
   coverage:
     docker:
-      - image: corebreaker/rust-devtools-circleci:rust1.59-v0.2.3
+      - image: corebreaker/rust-devtools-circleci:rust1.59-v0.3.0
     steps:
       - checkout
       - run:
           name: Make coverage
-          command: ".circleci/coverage.sh"
+          command: "coverage.sh"
       - run:
           name: Upload Coverage Result To Coveralls
           command: "coveralls -D target -i target/coverage/coveralls.json circleci"
